--- a/style.css
+++ b/style.css
@@ -380,6 +380,23 @@
             width: 24em;
         }
     }
+    
+    @media screen and (min-width:601px) and (max-width:1100px) {
+        #places {
+            display: flex;
+        }
+        #places2 {
+            display: flex;
+        }
+        #first {
+            width: 18em;
+            height: 25em;
+            margin-left: 0.2em;
+        }
+        #first h5 {
+            font-size: 0.9em;
+        }
+    }
     /*******************About page**********************/
     
     #back a {
