--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     }
     
     .topbar {
-        background-color: aqua;
+        background-color: #b8b894;
         width: 100%;
         height: 70px;
     }
@@ -77,6 +77,7 @@
             padding-right: 0.9em;
         }
     }
+    /************************slider********************************/
     /**********************Rest of tha content*********************/
     
     .arti-siderpage {
@@ -397,6 +398,92 @@
             font-size: 0.9em;
         }
     }
+    /*****************************Most explored places*******************************************/
+    
+    .most-explored h4 {
+        text-align: center;
+        padding-top: 1.5em;
+        font-size: 2.5em;
+        color: #e60073;
+        font-family: serif;
+    }
+    
+    .explored1 {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 1.7em;
+    }
+    
+    .explored2 {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 1.7em;
+    }
+    
+    #place1 {
+        border: 0px solid blue;
+        width: 15em;
+        height: 10em;
+        position: relative;
+        cursor: pointer;
+        border-radius: 1em;
+    }
+    
+    #place1 img {
+        width: 100%;
+        height: 10em;
+        border-radius: 1em;
+    }
+    
+    #place1 img:hover {
+        filter: brightness(40%);
+        transition: 0.5s;
+        animation-timing-function: ease-in;
+    }
+    
+    .centered h5 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        color: white;
+        transform: translate(-50%, -50%);
+        font-size: 2em;
+        font-family: calibri;
+    }
+    
+    .centered h5:hover {
+        color: #e60073;
+    }
+    
+    @media(max-width:767px) {
+        .explored1 {
+            display: block;
+        }
+        .explored2 {
+            display: block;
+        }
+        #place1 {
+            width: 18em;
+            height: 20em;
+            margin-top: 0.5em;
+        }
+        #place1 img {
+            width: 18em;
+            height: 20em;
+        }
+    }
+    
+    @media(min-width:768px) and(max-width:920px) {
+        #place1 {
+            width: 8em;
+            height: 15em;
+            margin-left: 1em;
+        }
+        #place1 img {
+            width: 8em;
+            height: 15em;
+        }
+    }
     /*******************About page**********************/
     
     #back a {
@@ -519,6 +606,110 @@
             font-size: 1em;
         }
     }
+    /******************Our travel guides*********/
+    
+    .travel-guides h3 {
+        text-align: center;
+        font-size: 2em;
+        color: #f17e32;
+        font-family: cursive;
+        padding-top: 1em;
+    }
+    
+    .guides {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 1em;
+    }
+    
+    #guide-1 {
+        border: 0px solid black;
+        width: 17em;
+        height: 22em;
+        background-color: azure;
+        border-radius: 6px;
+    }
+    
+    #guide-1 img {
+        width: 17em;
+        height: 15em;
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
+    }
+    
+    #guide-1 h4 {
+        text-align: center;
+        padding-top: 0.3em;
+        color: #73264d;
+        font-size: 1.3em;
+    }
+    
+    #guide-1 h5 {
+        padding-top: 0.5em;
+        text-align: center;
+        font-size: 1em;
+    }
+    
+    #guide-1 h5 span {
+        font-style: italic;
+        font-size: small;
+    }
+    
+    #guide-1 h6 {
+        text-align: center;
+        color: #0fe619;
+        font-size: 0.98em;
+        font-weight: lighter;
+    }
+    
+    #guide-1:hover {
+        height: 22em;
+        width: 15em;
+        transition: 1s;
+        margin-top: -2em;
+    }
+    
+    #guide-1 img:hover {
+        filter: brightness(40%);
+        height: 13em;
+        width: 15em;
+        transition: 1s;
+    }
+    
+    @media(max-width:600px) {
+        .guides {
+            display: block;
+        }
+        #guide-1 {
+            margin-top: 3em;
+            margin-left: 2em;
+        }
+    }
+    
+    @media(min-width:601px) and (max-width:900px) {
+        .guides {
+            display: block;
+        }
+        #guide-1 {
+            margin-top: 3em;
+            margin-left: 2em;
+        }
+    }
+    
+    @media(min-width:901px) and (max-width:1120px) {
+        .guides {
+            display: flex;
+        }
+        #guide-1 {
+            width: 12em;
+            height: 22em;
+            margin-top: 3em;
+            margin-left: 0.9em;
+        }
+        #guide-1 img {
+            width: 12em;
+        }
+    }
     /*******************Information page**********************/
     
     .service {
@@ -535,7 +726,7 @@
     .portion {
         border: 0px solid black;
         width: 40%;
-        height: 200px;
+        height: 210px;
         margin-left: 5%;
         margin-top: 3%;
         display: flex;
@@ -545,6 +736,7 @@
     .portion h3 {
         color: #55552b;
         font-size: 26px;
+        margin-top: -1em;
     }
     
     .portion p {
@@ -553,7 +745,7 @@
     }
     
     .portion img {
-        height: 200px;
+        height: 207px;
         width: 40%;
         border-radius: 5%;
     }
@@ -565,7 +757,7 @@
     .portion2 {
         border: 0px solid black;
         width: 40%;
-        height: 200px;
+        height: 210px;
         margin-left: 5%;
         margin-top: 3%;
         display: flex;
@@ -573,7 +765,7 @@
     }
     
     .portion2 img {
-        height: 200px;
+        height: 207px;
         width: 40%;
         border-radius: 5%;
     }
@@ -581,6 +773,7 @@
     .portion2 h3 {
         color: #55552b;
         font-size: 26px;
+        margin-top: -1em;
     }
     
     .portion2 p {
@@ -614,6 +807,196 @@
         }
         .portion2 p {
             font-size: xx-small;
+        }
+    }
+    
+    @media screen and (min-width:601px) and (max-width:1100px) {
+        .portion h3 {
+            font-size: 1.1em;
+        }
+        .portion p {
+            font-size: small;
+        }
+        .portion2 h3 {
+            font-size: 1.1em;
+        }
+        .portion2 p {
+            font-size: small;
+        }
+    }
+    /*****************Testmonials********************/
+    
+    .testmonials h4 {
+        text-align: center;
+        padding-top: 1.5em;
+        font-size: 2em;
+        color: #b36b00;
+        font-family: helvetica;
+        text-decoration: underline;
+    }
+    
+    .testmonials h5 {
+        text-align: center;
+        font-size: 1.7em;
+        font-style: oblique;
+        text-transform: capitalize;
+    }
+    
+    #all-testmonies {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 5em;
+    }
+    /*********first testmony***************/
+    
+    #first-testmony {
+        border: 0px solid yellow;
+        height: 17em;
+        width: 22em;
+        background-color: #e6fff7;
+        border-top-left-radius: 2em;
+    }
+    
+    #first-testmony:hover {
+        background-color: #d9b3ff;
+        width: 15em;
+        height: 22em;
+        transition: 1s;
+        transform: skewX(10deg);
+    }
+    
+    #first-testmony img {
+        width: 7em;
+        height: 7em;
+        border-radius: 50%;
+        margin-top: -4em;
+    }
+    
+    #first-testmony p {
+        font-size: small;
+        color: #737373;
+    }
+    
+    #first-testmony h5 {
+        font-style: normal;
+    }
+    
+    #first-testmony span {
+        font-style: italic;
+    }
+    
+    #first-testmony h6 i {
+        color: blueviolet;
+    }
+    /*********second testmony***************/
+    
+    #second-testmony {
+        border: 0px solid yellow;
+        height: 17em;
+        width: 22em;
+        background-color: #e6fff7;
+        border-top-left-radius: 2em;
+    }
+    
+    #second-testmony:hover {
+        background-color: #d9b3ff;
+        width: 15em;
+        height: 22em;
+        transition: 1s;
+        transform: skewX(10deg);
+    }
+    
+    #second-testmony img {
+        width: 7.5em;
+        height: 7em;
+        border-radius: 50%;
+        margin-top: -4em;
+    }
+    
+    #second-testmony p {
+        font-size: small;
+        color: #737373;
+    }
+    
+    #second-testmony h5 {
+        font-style: normal;
+    }
+    
+    #second-testmony span {
+        font-style: italic;
+    }
+    
+    #second-testmony h6 i {
+        color: blueviolet;
+    }
+    /*********third testmony***************/
+    
+    #third-testmony {
+        border: 0px solid yellow;
+        height: 17em;
+        width: 22em;
+        background-color: #e6fff7;
+        border-top-left-radius: 2em;
+    }
+    
+    #third-testmony:hover {
+        background-color: #d9b3ff;
+        width: 15em;
+        height: 22em;
+        transition: 1s;
+        transform: skewX(10deg);
+    }
+    
+    #third-testmony img {
+        width: 7.5em;
+        height: 7em;
+        border-radius: 50%;
+        margin-top: -4em;
+    }
+    
+    #third-testmony p {
+        font-size: small;
+        color: #737373;
+    }
+    
+    #third-testmony h5 {
+        font-style: normal;
+    }
+    
+    #third-testmony span {
+        font-style: italic;
+    }
+    
+    #third-testmony h6 i {
+        color: blueviolet;
+    }
+    
+    @media screen and (max-width:600px) {
+        #all-testmonies {
+            display: block;
+        }
+        #second-testmony {
+            margin-top: 5em;
+        }
+        #third-testmony {
+            margin-top: 5em;
+        }
+    }
+    
+    @media screen and (min-width:601px) and (max-width:1100px) {
+        #all-testmonies {
+            display: block;
+        }
+        #first-testmony {
+            width: 25em;
+        }
+        #second-testmony {
+            margin-top: 5em;
+            width: 25em;
+        }
+        #third-testmony {
+            margin-top: 5em;
+            width: 25em;
         }
     }
     /*******************Contact page**********************/
@@ -952,7 +1335,7 @@
     
     .social-pages a i {
         font-size: 25px;
-        color: #0099e6;
+        color: #cc5200;
     }
     
     #container {
