--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@
     
     .packages h3 {
         text-align: center;
-        color: #e68a00;
+        color: #e60073;
         font-size: 3em;
         font-family: serif;
         padding-top: 0.1em;
