--- a/style.css
+++ b/style.css
@@ -296,6 +296,72 @@
         padding-left: 15%;
         color: #00ffff;
     }
+    /********************Flip box*************************/
+    
+    .flip {
+        margin: auto;
+        border: 0px solid black;
+        width: 650px;
+        height: 300px;
+        perspective: 1000px;
+        background-color: #73264d;
+    }
+    
+    .flip-box {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+    
+    .flip:hover .flip-box {
+        transform: rotateY(180deg);
+    }
+    
+    #flipfront,
+    #flipback {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    }
+    
+    #flipfront {
+        background-color: #86592d;
+    }
+    
+    #flipback {
+        background-color: #555;
+        transform: rotateY(180deg);
+    }
+    
+    #flipfront h4 {
+        padding-top: 0.5em;
+        color: white;
+        font-size: 4em;
+        font-family: serif;
+    }
+    
+    #flipback h3 {
+        padding-top: 0.5em;
+        color: white;
+        font-size: 3.5em;
+    }
+    
+    #flipfront h5 {
+        padding-top: 1.3em;
+        color: #5fe612;
+        font-size: 2em;
+    }
+    
+    #flipback h5 {
+        padding-top: 1.3em;
+        color: #5fe612;
+        font-size: 2em;
+    }
     /*******************Packages**********************/
     
     .packages h3 {
@@ -424,9 +490,9 @@
         border: 0px solid blue;
         width: 15em;
         height: 10em;
-        position: relative;
         cursor: pointer;
         border-radius: 1em;
+        position: relative;
     }
     
     #place1 img {
@@ -438,7 +504,6 @@
     #place1 img:hover {
         filter: brightness(40%);
         transition: 0.5s;
-        animation-timing-function: ease-in;
     }
     
     .centered h5 {
@@ -606,7 +671,29 @@
             font-size: 1em;
         }
     }
-    /******************Our travel guides*********/
+    /**************we are your partner*******************/
+    
+    .wepartner {
+        border: 0px solid black;
+        width: 98%;
+        height: 25em;
+        margin: auto;
+    }
+    
+    .wepartner img {
+        width: 100%;
+        height: 25em;
+    }
+    
+    .wepartner pre {
+        transform: translate(10%, -270%);
+        position: absolute;
+        font-size: 2.2em;
+        color: #993366;
+        font-weight: bold;
+        font-family: serif;
+    }
+    /******************Our travel guides*****************************************/
     
     .travel-guides h3 {
         text-align: center;
@@ -1310,6 +1397,18 @@
     }
     
     .vision p {
+        margin-left: 0.5em;
+        font-style: italic;
+    }
+    
+    .purpose h4 {
+        color: #ffff;
+        font-family: georgia;
+        margin-left: 2em;
+        margin-top: 0.7em;
+    }
+    
+    .purpose p {
         margin-left: 0.5em;
         font-style: italic;
     }
